fixed vscode debugger not building app

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
                "ASPNETCORE_ENVIRONMENT": "Development"
            },
            "sourceFileMap": {
-               "/Views": "${workspaceFolder}/Views"
+               "/Views": "${workspaceFolder}/webapitest/Views"
            }
        },
         {
