--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/middleware.test/middleware.test.csproj"
+                "${workspaceFolder}/webapitest/webapitest.csproj"
             ],
             "problemMatcher": "$tsc"
         },
