--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
            "cwd": "${workspaceFolder}/webapitest",
            "stopAtEntry": false,
            "launchBrowser": {
-               "enabled": true
+               "enabled": false
            },
            "env": {
                "ASPNETCORE_ENVIRONMENT": "Development"
